containers/kubernetes/rabbitmq/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: rabbitmq
    namespace: nrocinu
spec:
    replicas: 1
    selector:
        matchLabels:
            app: rabbitmq
    template:
        metadata:
            labels:
                app: rabbitmq
        spec:
            containers:
                - name: rabbitmq
                  image: rabbitmq:3-management
                  imagePullPolicy: Always
                  ports:
                      - name: http
                        containerPort: 15672
                      - name: rabbitmq
                        containerPort: 5672
                  volumeMounts:
                      - name: rabbitmq-storage
                        mountPath: /var/lib/rabbitmq
            volumes:
                - name: rabbitmq-storage
                  hostPath:
                    path: /opt/nrocinu/rabbitmq
