containers/kubernetes/rabbitmq/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: rabbitmq
    namespace: nrocinu
spec:
    selector:
        app: rabbitmq
    ports:
        - name: http
          protocol: TCP
          port: 80
          targetPort: http
        - name: rabbitmq
          protocol: TCP
          port: 5672
          targetPort: rabbitmq
